setup monorepo and backend

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -7,5 +7,9 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w"
+  },
+  "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2"
   }
 }
