--- a/package.json
+++ b/package.json
@@ -16,6 +16,5 @@
   "engines": {
     "node": ">=22.12.0"
   },
-  "packageManager": "pnpm@latest",
-  "type": "module"
+  "packageManager": "pnpm@latest"
 }
