--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -33,7 +33,8 @@
     "drizzle-orm": "^0.44.6",
     "mysql2": "^3.15.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
