--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,6 +28,7 @@
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@paralleldrive/cuid2": "^2.2.2",
     "class-transformer": "^0.5.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
