--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -35,10 +35,10 @@
     "@ngrx/router-store": "^20.0.1",
     "@ngrx/store": "^20.0.1",
     "@ngrx/store-devtools": "^20.0.1",
+    "@paralleldrive/cuid2": "^2.2.2",
     "dayjs": "^1.11.18",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "uuid": "^13.0.0"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^20.3.4",
