--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,6 +37,8 @@
     "@ngrx/store-devtools": "^20.0.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "dayjs": "^1.11.18",
+    "govuk-frontend": "^5.13.0",
+    "prettier": "^3.6.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
