--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -37,7 +37,10 @@
     "@ngrx/store-devtools": "^20.0.1",
     "@paralleldrive/cuid2": "^2.2.2",
     "dayjs": "^1.11.18",
+    "dedent": "^1.7.0",
     "govuk-frontend": "^5.13.0",
+    "json-schema-generator": "^2.0.6",
+    "ngx-highlightjs": "^14.0.1",
     "prettier": "^3.6.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
@@ -47,6 +50,7 @@
     "@angular/cli": "^20.3.4",
     "@angular/compiler-cli": "^20.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/json-schema-generator": "^2.0.3",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
