scaffold more sections

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -19,7 +19,9 @@
       "@app/*": ["./src/app/*"],
       "@assets/*": ["./src/assets/*"],
       "@components/*": ["./src/app/components/*"],
+      "@directives/*": ["./src/app/directives/*"],
       "@environments/*": ["./src/environments/*"],
+      "@forms/*": ["./src/app/forms/*"],
       "@pages/*": ["./src/app/(pages)/*"],
       "@store/*": ["./src/app/store/*"]
     }
